--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "babel": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["scrapper", "mtg"],
+  "keywords": [
+    "scrapper",
+    "mtg"
+  ],
   "author": "Felipe",
   "license": "WTFPL",
   "devDependencies": {
