--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "babel": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "scrapper",
-    "mtg"
-  ],
+  "keywords": ["scrapper", "mtg"],
   "author": "Felipe",
   "license": "WTFPL",
   "devDependencies": {
@@ -26,7 +23,6 @@
     "cheerio": "^1.0.0-rc.2",
     "micro": "^9.1.4",
     "micro-cors": "^0.1.0",
-    "microrouter": "^3.1.2",
     "request": "^2.85.0"
   }
 }
